change Collector.toList() to .toList() thx java 17